--- a/stockplatform/stockinfo/templates/stockinfo/stock_list.html
+++ b/stockplatform/stockinfo/templates/stockinfo/stock_list.html
@@ -1,4 +1,4 @@
-#股票資訊平台 首頁
+
 
 <!DOCTYPE html>
 <html lang="zh-Hant">
@@ -72,7 +72,7 @@
     </style>
 </head>
 <body>
-    <h1>股票查詢</h1>
+    <h1>股票資訊平台 首頁</h1>
 
     <form method="post">
         {% csrf_token %}
