--- a/stockplatform/stockinfo/templates/stockinfo/stock_list.html
+++ b/stockplatform/stockinfo/templates/stockinfo/stock_list.html
@@ -187,7 +187,7 @@
               y,
               text: signal === 1 ?'▲':'▼',
               font: {
-                  color: signal === 1 ? 'green' : 'red',
+                  color: signal === 1 ? 'red' : 'green',
               },
               yshift: signal === 1 ? 5 : -5,
           })
